tests/e2e/mutation_any_invalid3.error
Error: syntax error in story at line 3, column 17

3|    c = b.substring(start:"2")
                      ^^^^^^^^^

E0115: Mutation `substring` requires argument `start` to be of type `int`, not `string`
