tests/e2e/mutation_any_invalid3.story
a = [] to List[any]
b = a[0]
c = b.substring(start:"2")
